--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
     </div>
 
-    <button id='exitButton' class="backdrop-blur">&#8678 Выйти</button>
+    <button id='exitButton' class="rect-btn backdrop-blur">&#8678 Выйти</button>
     <div id='canvas-wrapper'>
       <canvas id='canvas' class='backdrop-blur'></canvas>
       <div id='canvas-wrapper-toggler' class='backdrop-blur'>Open</div>
@@ -60,7 +60,7 @@
       <div id="alphabetId"></div>
     </div>
 
-    <button id='btnGenarateId' class='sp-none backdrop-blur'>Начать игру &#10157</button>
+    <button id='btnGenarateId' class='rect-btn rect-btn_blue sp-none'>Начать игру &#10157</button>
 
     <div class="fixed-group-right-bottom">
       <div id="possible-items-counter" class='fixed-bottom-elm backdrop-blur'></div>
